--- a/package.json
+++ b/package.json
@@ -24,20 +24,21 @@
     "url": "https://github.com/TwilioDevEd/sms-notifications-node/issues"
   },
   "homepage": "https://github.com/TwilioDevEd/sms-notifications-node",
-  "engines" : { "node" : ">=4.1.0 <5.5.0" },
+  "engines" : { "node" : ">=4.6.1 <5.5.0" },
   "dependencies": {
-    "body-parser": "^1.12.0",
+    "body-parser": "^1.16.1",
     "connect-flash": "^0.1.1",
-    "express": "^4.12.0",
-    "express-session": "^1.10.3",
-    "http-auth": "^2.2.5",
-    "jade": "^1.9.2",
-    "mongoose": "^3.8.23",
-    "morgan": "^1.5.1",
-    "twilio": "^1.11.1"
+    "express": "^4.14.1",
+    "express-session": "^1.15.1",
+    "http-auth": "^3.1.1",
+    "jade": "^1.11.0",
+    "mongoose": "^4.8.4",
+    "morgan": "^1.8.1",
+    "twilio": "^2.11.1",
+    "dotenv": "^4.0.0"
   },
   "devDependencies": {
-    "chai": "^2.1.0",
-    "mocha": "^2.1.0"
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
